# nodepilot

./: .env.example  .gitignore  README.md  pyproject.toml
src/nodepilot/: __init__.py  __main__.py  client.py  config.py  operations.py  server.py
tests/: test_client.py  test_live_smoke.py  test_operations.py
